<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textStyle="bold"
        android:text="@string/bienvenue_dans_l_application_mushtool" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/Boat_text" />



        <Button
            android:id="@+id/Polar_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Polar_text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        android:padding="8dp">



        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/longitude" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/degre"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/minute"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/seconde"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            tools:ignore="DuplicateSpeakableTextCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textStyle="bold"
            android:text="@string/latitude" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/degre"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/minute"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/seconde"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColorHint="#757575" />



    </LinearLayout>


    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/Mush_text" />


</LinearLayout>